--- a/sections/ks-dawn-parallax-image.liquid
+++ b/sections/ks-dawn-parallax-image.liquid
@@ -302,7 +302,7 @@
     {
       "type": "header",
       "content": "Video",
-      "info": "NOTE: Either images or videos can be used"
+      "info": "NOTE: Either image or video can be used"
     },
     {
       "type": "video",
@@ -423,8 +423,7 @@
       "type": "inline_richtext",
       "id": "heading",
       "label": "Heading",
-      "default": "Parallax Image",
-      "info": "Leave empty to disable"
+      "default": "Parallax Image"
     },
     {
       "type": "select",
