--- a/sections/ks-general-marquee.liquid
+++ b/sections/ks-general-marquee.liquid
@@ -32,9 +32,11 @@
 
   .ks-marquee {
     display: block;
+    overflow: hidden;
   }
 
   .ks-marquee ul {
+    padding: 0;
     margin: 0;
     list-style: none;
     display: inline-flex;
