--- a/sections/ks-general-testimonials-slider.liquid
+++ b/sections/ks-general-testimonials-slider.liquid
@@ -76,6 +76,13 @@
     transition: all .2s ease-out;
   }
 
+  #ks-testimonials-slider-{{ section.id }} .swiper .swiper-slide {
+    {% if section.settings.card_equal_height %}
+      height: auto;
+      display: flex;
+    {% endif %}
+  }
+
   .ks-testimonials-slider .swiper .swiper-slide-visible {
     transform: scale(1);
     opacity: 1;
@@ -104,7 +111,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 50rem;
-    background-color: rgba(var(--color-foreground, 1));
+    background-color: rgba(var(--color-foreground), 1);
     color: rgba(var(--color-background));
   }
 
@@ -164,6 +171,16 @@
     margin: 0 0 8px;
   }
 
+  .ks-testimonials-slider-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  [data-card-text-align="center"] .ks-testimonials-slider-footer {
+    flex-direction: column;
+  }
+
   .ks-testimonials-slider-author-wrapper {
     display: inline-flex;
     align-items: center;
@@ -188,6 +205,25 @@
 
   .ks-testimonials-slider-subtitle svg {
     margin-right: 6px;
+  }
+
+  .ks-testimonials-slider-product img {
+    border: 1px solid rgba(var(--color-foreground), .1);
+    transition: all .2s ease-out;
+    margin-left: 6px;
+  }
+
+  [data-card-text-align="center"]  .ks-testimonials-slider-product img {
+    margin-left: 0;
+    margin-top: 6px;
+  }
+
+  .ks-testimonials-slider-product a:hover img {
+    opacity: .85;
+  }
+
+  #ks-testimonials-slider-{{ section.id }} .ks-testimonials-slider-product img {
+    border-radius: {{ section.settings.card_border_radius | divided_by: 2 }}px;
   }
 
 {%- endstyle -%}
@@ -249,6 +285,10 @@ class KsTestimonialsSlider extends HTMLElement {
         ? { delay: Number(this.dataset.sliderAutoplay) * 1000 }
         : undefined,
       watchSlidesProgress: true, 
+      mousewheel: {
+        enabled: true,
+        forceToAxis: true
+      },
     }
     return options
   }
@@ -273,7 +313,8 @@ customElements.define('ks-testimonials-slider', KsTestimonialsSlider)
   data-breakpoint-md="{{ section.settings.breakpoint_md }}"
   data-breakpoint-lg="{{ section.settings.breakpoint_lg }}"
   data-breakpoint-xl="{{ section.settings.breakpoint_xl }}"
-  data-breakpoint-xxl="{{ section.settings.breakpoint_xxl }}">
+  data-breakpoint-xxl="{{ section.settings.breakpoint_xxl }}"
+  data-card-text-align="{{ section.settings.card_text_align }}">
   
   <div class="section-header page-width">
     {%- if section.settings.heading != blank -%}
@@ -314,36 +355,53 @@ customElements.define('ks-testimonials-slider', KsTestimonialsSlider)
                   {{ block.settings.description }}
                 </div>
               {% endunless %}
-              {% if block.settings.img != blank or block.settings.author != blank %}
-                <div class="ks-testimonials-slider-author-wrapper">
-                  {% unless block.settings.img == blank %}
-                    {% liquid 
-                      assign img_size_x2 = section.settings.img_size | times: 2
-                    %}
-                    <div class="ks-testimonials-slider-author-img-wrapper">
+              <div class="ks-testimonials-slider-footer">
+                {% if block.settings.img != blank or block.settings.author != blank %}
+                  <div class="ks-testimonials-slider-author-wrapper">
+                    {% unless block.settings.img == blank %}
+                      {% liquid 
+                        assign img_size_x2 = section.settings.img_size | times: 2
+                      %}
+                      <div class="ks-testimonials-slider-author-img-wrapper">
+                        <img
+                          src="{{ block.settings.img | image_url: width: img_size_x2, height: img_size_x2, crop: 'center' }}"
+                          alt="{{ block.settings.img.alt }}"
+                          width="{{ section.settings.img_size }}"
+                          height="{{ section.settings.img_size }}"
+                          loading="lazy">
+                      </div>
+                    {% endunless %}
+                    {% unless block.settings.author == blank %}
+                      <p class="ks-testimonials-slider-author">
+                        {{ block.settings.author }} 
+                        {% unless block.settings.author_subtitle == blank %}
+                          <span class="ks-testimonials-slider-subtitle">
+                            <svg class="" width="16" height="16" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg">
+                              <path d="M20.396 11c-.018-.646-.215-1.275-.57-1.816-.354-.54-.852-.972-1.438-1.246.223-.607.27-1.264.14-1.897-.131-.634-.437-1.218-.882-1.687-.47-.445-1.053-.75-1.687-.882-.633-.13-1.29-.083-1.897.14-.273-.587-.704-1.086-1.245-1.44S11.647 1.62 11 1.604c-.646.017-1.273.213-1.813.568s-.969.854-1.24 1.44c-.608-.223-1.267-.272-1.902-.14-.635.13-1.22.436-1.69.882-.445.47-.749 1.055-.878 1.688-.13.633-.08 1.29.144 1.896-.587.274-1.087.705-1.443 1.245-.356.54-.555 1.17-.574 1.817.02.647.218 1.276.574 1.817.356.54.856.972 1.443 1.245-.224.606-.274 1.263-.144 1.896.13.634.433 1.218.877 1.688.47.443 1.054.747 1.687.878.633.132 1.29.084 1.897-.136.274.586.705 1.084 1.246 1.439.54.354 1.17.551 1.816.569.647-.016 1.276-.213 1.817-.567s.972-.854 1.245-1.44c.604.239 1.266.296 1.903.164.636-.132 1.22-.447 1.68-.907.46-.46.776-1.044.908-1.681s.075-1.299-.165-1.903c.586-.274 1.084-.705 1.439-1.246.354-.54.551-1.17.569-1.816zM9.662 14.85l-3.429-3.428 1.293-1.302 2.072 2.072 4.4-4.794 1.347 1.246z" fill="currentColor"></path>
+                            </svg>
+                            {{ block.settings.author_subtitle }}
+                          </span>
+                        {% endunless %}
+                      </p>
+                    {% endunless %}
+                  </div>
+                {% endif %}
+                {% unless block.settings.product == blank %}
+                  {% liquid 
+                    assign img_size_x2 = section.settings.img_size | times: 2
+                  %}
+                  <div class="ks-testimonials-slider-product">
+                    <a href="{{ block.settings.product.url }}" title="{{ block.settings.product.title }}">
                       <img
-                        src="{{ block.settings.img | image_url: width: img_size_x2, height: img_size_x2, crop: 'center' }}"
-                        alt="{{ block.settings.img.alt }}"
+                        src="{{ block.settings.product.featured_image | image_url: width: img_size_x2, height: img_size_x2, crop: 'center' }}"
+                        alt="{{ block.settings.product.featured_image.alt }}"
                         width="{{ section.settings.img_size }}"
                         height="{{ section.settings.img_size }}"
                         loading="lazy">
-                    </div>
-                  {% endunless %}
-                  {% unless block.settings.author == blank %}
-                    <p class="ks-testimonials-slider-author">
-                      {{ block.settings.author }} 
-                      {% unless block.settings.author_subtitle == blank %}
-                        <span class="ks-testimonials-slider-subtitle">
-                          <svg class="" width="16" height="16" viewBox="0 0 22 22" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M20.396 11c-.018-.646-.215-1.275-.57-1.816-.354-.54-.852-.972-1.438-1.246.223-.607.27-1.264.14-1.897-.131-.634-.437-1.218-.882-1.687-.47-.445-1.053-.75-1.687-.882-.633-.13-1.29-.083-1.897.14-.273-.587-.704-1.086-1.245-1.44S11.647 1.62 11 1.604c-.646.017-1.273.213-1.813.568s-.969.854-1.24 1.44c-.608-.223-1.267-.272-1.902-.14-.635.13-1.22.436-1.69.882-.445.47-.749 1.055-.878 1.688-.13.633-.08 1.29.144 1.896-.587.274-1.087.705-1.443 1.245-.356.54-.555 1.17-.574 1.817.02.647.218 1.276.574 1.817.356.54.856.972 1.443 1.245-.224.606-.274 1.263-.144 1.896.13.634.433 1.218.877 1.688.47.443 1.054.747 1.687.878.633.132 1.29.084 1.897-.136.274.586.705 1.084 1.246 1.439.54.354 1.17.551 1.816.569.647-.016 1.276-.213 1.817-.567s.972-.854 1.245-1.44c.604.239 1.266.296 1.903.164.636-.132 1.22-.447 1.68-.907.46-.46.776-1.044.908-1.681s.075-1.299-.165-1.903c.586-.274 1.084-.705 1.439-1.246.354-.54.551-1.17.569-1.816zM9.662 14.85l-3.429-3.428 1.293-1.302 2.072 2.072 4.4-4.794 1.347 1.246z" fill="currentColor"></path>
-                          </svg>
-                          {{ block.settings.author_subtitle }}
-                        </span>
-                      {% endunless %}
-                    </p>
-                  {% endunless %}
-                </div>
-              {% endif %}
+                    </a>
+                  </div>
+                {% endunless %}
+              </div>
             </div>
           </div>
         {% endfor %}
@@ -546,6 +604,12 @@ customElements.define('ks-testimonials-slider', KsTestimonialsSlider)
       "default": "40"
     },
     {
+      "type": "checkbox",
+      "id": "card_equal_height",
+      "label": "Equal-height cards",
+      "default": true
+    },
+    {
       "type": "select",
       "id": "title_font_size",
       "label": "Title font-size",
@@ -647,25 +711,6 @@ customElements.define('ks-testimonials-slider', KsTestimonialsSlider)
       "unit": "px",
       "label": "Bottom padding",
       "default": 80
-    },
-    {
-      "type": "header",
-      "content": "Get Support",
-      "info": "Please use our [Community Forum](https://community.kondasoft.com) to get help from our support team."
-    },
-    {
-      "type": "header",
-      "content": "Shopify Snippets",
-      "info": "Check out our other [Shopify Snippets](https://www.kondasoft.com/collections/shopify-snippets)"
-    },
-    {
-      "type": "header",
-      "content": "Shopify Themes",
-      "info": "Want to WOW your customers?! Check out our [Shopify Themes](https://www.kondasoft.com/collections/shopify-themes)."
-    },
-    {
-      "type": "paragraph",
-      "content": "© 2024 KondaSoft.com"
     }
   ],
   "blocks": [
@@ -688,7 +733,7 @@ customElements.define('ks-testimonials-slider', KsTestimonialsSlider)
         {
           "type": "image_picker",
           "id": "img",
-          "label": "Image"
+          "label": "Author Image"
         },
         {
           "type": "text",
@@ -703,6 +748,11 @@ customElements.define('ks-testimonials-slider', KsTestimonialsSlider)
           "label": "Author's subtitle",
           "default": "Verified Customer",
           "info": "Leave empty to disable"
+        },
+        {
+          "type": "product",
+          "id": "product",
+          "label": "Product (optional)"
         }
       ]
     }
