--- a/sections/ks-dawn-newsletter-popup.liquid
+++ b/sections/ks-dawn-newsletter-popup.liquid
@@ -38,6 +38,7 @@
 
   #ks-newsletter-dialog::backdrop {
     background: rgba({{ backdrop_bg_color_rgb }}, 0);
+    -webkit-backdrop-filter: blur({{ section.settings.backdrop_blur }}px);
     backdrop-filter: blur({{ section.settings.backdrop_blur }}px);
     transition: background-color 0.7s;
     cursor: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23ffffff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cline x1='18' y1='6' x2='6' y2='18'%3E%3C/line%3E%3Cline x1='6' y1='6' x2='18' y2='18'%3E%3C/line%3E%3C/svg%3E") 24 24, pointer;
